# brave-core

./: BUILD.gn  Jenkinsfile  package-lock.json  package.json
android/: brave_java_resources.gni  brave_java_sources.gni
android/java/: AndroidManifest.xml
app/: brave_generated_resources.grd  brave_main_delegate_browsertest.cc
app/resources/: brave_generated_resources_en-GB.xtb  generated_resources_en-GB.xtb
app/vector_icons/: BUILD.gn
browser/: brave_browser_process_impl.cc  brave_browser_process_impl.h  brave_content_browser_client.cc  sources.gni
browser/brave_shields/: ad_block_service_browsertest.cc  ad_block_subscription_download_manager_getter.cc  ad_block_subscription_download_manager_getter.h
browser/debounce/: debounce_browsertest.cc
browser/net/: brave_request_handler.cc
browser/ui/: BUILD.gn
common/: url_constants.cc
components/brave_adaptive_captcha/: BUILD.gn  brave_adaptive_captcha.cc  brave_adaptive_captcha.h  get_adaptive_captcha.cc  get_adaptive_captcha.h  get_adaptive_captcha_challenge.cc  get_adaptive_captcha_challenge.h  get_adaptive_captcha_challenge_unittest.cc  get_adaptive_captcha_unittest.cc  url_loader.h
components/brave_adaptive_captcha/test/: BUILD.gn
components/brave_vpn/: BUILD.gn  brave_vpn_connection_info.cc  brave_vpn_connection_info.h  brave_vpn_connection_manager.h  brave_vpn_connection_manager_mac.h  brave_vpn_connection_manager_mac.mm  macvpntool.mm
components/definitions/: chromel.d.ts  rewards.d.ts  rewardsExtensions.d.ts
components/ipfs/: ipfs_service.cc  (+1 more)
patches/: chrome-BUILD.gn.patch  chrome-VERSION.patch  chrome-browser-ui-android-toolbar-BUILD.gn.patch
test/: BUILD.gn
(+89 files in other folders)
