# Copyright (c) 2021 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/. */

import("//brave/build/config.gni")
#import("//brave/components/brave_ads/browser/buildflags/buildflags.gni")
#import("//build/config/sanitizers/sanitizers.gni")
import("//testing/test.gni")

source_set("brave_adaptive_captcha_unit_tests") {
  testonly = true
  sources = [
    "//brave/components/brave_adaptive_captcha/get_adaptive_captcha_unittest.cc",
    "//brave/components/brave_adaptive_captcha/get_adaptive_captcha_challenge_unittest.cc",
  ]

  deps = [
    "//base/test:test_support",
#    "//brave/browser",
#    "//brave/browser/brave_ads",
#    "//brave/components/brave_ads/browser:browser",
#    "//brave/components/brave_ads/browser:testutil",
#    "//brave/components/brave_rewards/browser:browser",
#    "//brave/components/brave_rewards/common:common",
#    "//brave/components/brave_rewards/test:brave_rewards_unit_tests",
#    "//brave/components/challenge_bypass_ristretto",
#    "//brave/test:brave_browser_tests",
#    "//chrome/browser:browser",
#    "//chrome/browser/profiles:profile",
#    "//components/prefs:prefs",
#    "//content/test:test_support",
  ]

  data = [ "//brave/vendor/bat-native-ads/data/" ]

#  configs += [ "//brave/vendor/bat-native-ads:internal_config" ]
}  # source_set("brave_adaptive_captcha_unit_tests")
